# PLATAFORMA_LOGISTICA

./: .env  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/autenticacion/: dependencies.py  jwt_handler.py  router.py  service.py
app/base_de_datos/: configuracion.py  modelos.py  sesion.py
app/base_de_datos/migraciones/: README  env.py
app/bodegas/: models.py  repository.py  router.py  schemas.py  service.py
app/clientes/: models.py  repository.py  router.py  schemas.py  service.py
app/comun/: dependencias.py  excepciones.py  modelos.py  paginacion.py  regex.py
app/envios/: repository.py  router.py  schemas.py  service.py
app/envios/base/: discount_service.py  models.py
app/envios/maritimo/: router.py  schemas.py  service.py
app/envios/terrestre/: router.py  schemas.py  service.py
app/productos/: models.py  repository.py  router.py  schemas.py  service.py
app/puertos/: models.py  repository.py  router.py  schemas.py  service.py
app/tests/: conftest.py
app/tests/autenticacion/: test_register_y_roles.py  test_token.py
app/tests/bodegas/: test_crud_bodegas.py
app/tests/clientes/: test_crud_clientes.py
app/tests/envios/: test_cotizaciones.py  test_crud_envios.py  (+1 more)
app/tipos_producto/: models.py  repository.py  router.py  schemas.py  service.py
app/usuarios/: models.py  passwords.py  repository.py  router.py  schemas.py  service.py
docs/: DIAGRAMA_ER.md  ENTREGABLES.md  GIT_FLOW.md  respuestas_Wild Security .docx
frontend/src/: App.tsx  almacen_token.ts  api.ts
scripts/: schema.sql
(+7 files in other folders)
